--- a/.github/workflows/auto-merge.yml
+++ b/.github/workflows/auto-merge.yml
@@ -23,10 +23,7 @@ jobs:
         env:
           PR_URL: ${{ github.event.pull_request.html_url }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-  auto-approve:
-    runs-on: ubuntu-latest
-    permissions:
-      pull-requests: write
-    if: ${{ github.actor == 'dependabot[bot]' }}
-    steps:
-      - uses: hmarr/auto-approve-action@v3
+      - name: Auto Approve Dependabot PRs
+        uses: hmarr/auto-approve-action@v3
+        with:
+          review-message: "Auto approved automated PR"
