--- a/NOVAxis/NOVAxis.csproj
+++ b/NOVAxis/NOVAxis.csproj
@@ -46,9 +46,10 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Discord.Net.Interactions" Version="3.13.0" />
-    <PackageReference Include="Lavalink4NET" Version="4.0.0-beta.3-6" />
-    <PackageReference Include="Lavalink4NET.Discord.NET" Version="4.0.0-beta.3-6" />
-    <PackageReference Include="Lavalink4NET.InactivityTracking" Version="4.0.0-beta.3-6" />
+    <PackageReference Include="Lavalink4NET" Version="4.0.0" />
+    <PackageReference Include="Lavalink4NET.Discord.NET" Version="4.0.0" />
+    <PackageReference Include="Lavalink4NET.InactivityTracking" Version="4.0.0" />
+    <PackageReference Include="Lavalink4NET.Integrations.TextToSpeech" Version="4.0.0" />
     <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="8.0.0" />
