--- a/NOVAxis/NOVAxis.csproj
+++ b/NOVAxis/NOVAxis.csproj
@@ -21,6 +21,7 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Anthropic.SDK" Version="3.2.3" />
     <PackageReference Include="Lavalink4NET" Version="4.0.18" />
     <PackageReference Include="Lavalink4NET.Discord.NET" Version="4.0.18" />
     <PackageReference Include="Lavalink4NET.InactivityTracking" Version="4.0.18" />
