--- a/NOVAxis/NOVAxis.csproj
+++ b/NOVAxis/NOVAxis.csproj
@@ -2,7 +2,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <Version>5.1.0</Version>
-    <TargetFramework>net8.0</TargetFramework>
+    <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>disable</ImplicitUsings>
     <Nullable>disable</Nullable>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
@@ -21,33 +21,33 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Anthropic.SDK" Version="3.2.3" />
-    <PackageReference Include="Lavalink4NET" Version="4.0.18" />
-    <PackageReference Include="Lavalink4NET.Discord.NET" Version="4.0.18" />
-    <PackageReference Include="Lavalink4NET.InactivityTracking" Version="4.0.18" />
-    <PackageReference Include="Lavalink4NET.Integrations.Lavasearch" Version="4.0.18" />
-    <PackageReference Include="Lavalink4NET.Integrations.Lavasrc" Version="4.0.18" />
-    <PackageReference Include="Lavalink4NET.Integrations.TextToSpeech" Version="4.0.18" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.4" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="8.0.4" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="8.0.4" />
-    <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="8.0.0" />
-    <PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0" />
-    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="8.0.1" />
-    <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="8.0.0" />
-    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="8.0.0" />
-    <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
-    <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="8.0.0" />
-    <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="8.0.2" />
-    <PackageReference Include="Discord.Net" Version="3.14.1" />
-    <PackageReference Include="Discord.Net.Commands" Version="3.14.1" />
-    <PackageReference Include="Discord.Net.Core" Version="3.14.1" />
-    <PackageReference Include="Discord.Net.Rest" Version="3.14.1" />
-    <PackageReference Include="Discord.Net.Webhook" Version="3.14.1" />
-    <PackageReference Include="Discord.Net.WebSocket" Version="3.14.1" />
-    <PackageReference Include="Discord.Net.Interactions" Version="3.14.1" />
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.1" />
-    <PackageReference Include="SixLabors.ImageSharp" Version="3.1.4" />
+    <PackageReference Include="Anthropic.SDK" Version="5.0.0" />
+    <PackageReference Include="Lavalink4NET" Version="4.0.27" />
+    <PackageReference Include="Lavalink4NET.Discord.NET" Version="4.0.27" />
+    <PackageReference Include="Lavalink4NET.InactivityTracking" Version="4.0.27" />
+    <PackageReference Include="Lavalink4NET.Integrations.Lavasearch" Version="4.0.27" />
+    <PackageReference Include="Lavalink4NET.Integrations.Lavasrc" Version="4.0.27" />
+    <PackageReference Include="Lavalink4NET.Integrations.TextToSpeech" Version="4.0.27" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.3" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="9.0.3" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.3" />
+    <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="9.0.3" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.3" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="9.0.3" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="9.0.3" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="9.0.3" />
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.3" />
+    <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="9.0.3" />
+    <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="9.0.0-preview.3.efcore.9.0.0" />
+    <PackageReference Include="Discord.Net" Version="3.17.2" />
+    <PackageReference Include="Discord.Net.Commands" Version="3.17.2" />
+    <PackageReference Include="Discord.Net.Core" Version="3.17.2" />
+    <PackageReference Include="Discord.Net.Rest" Version="3.17.2" />
+    <PackageReference Include="Discord.Net.Webhook" Version="3.17.2" />
+    <PackageReference Include="Discord.Net.WebSocket" Version="3.17.2" />
+    <PackageReference Include="Discord.Net.Interactions" Version="3.17.2" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.3" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.3" />
+    <PackageReference Include="SixLabors.ImageSharp" Version="3.1.7" />
   </ItemGroup>
 </Project>
