--- a/NOVAxis/NOVAxis.csproj
+++ b/NOVAxis/NOVAxis.csproj
@@ -40,16 +40,17 @@
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.8" />
     <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="9.0.8" />
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="9.0.0" />
-    <PackageReference Include="Discord.Net" Version="3.18.0" />
-    <PackageReference Include="Discord.Net.Commands" Version="3.18.0" />
-    <PackageReference Include="Discord.Net.Core" Version="3.18.0" />
-    <PackageReference Include="Discord.Net.Rest" Version="3.18.0" />
-    <PackageReference Include="Discord.Net.Webhook" Version="3.18.0" />
-    <PackageReference Include="Discord.Net.WebSocket" Version="3.18.0" />
-    <PackageReference Include="Discord.Net.Interactions" Version="3.18.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.8" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.8" />
     <PackageReference Include="SixLabors.ImageSharp" Version="3.1.11" />
     <PackageReference Include="YoutubeDLSharp" Version="1.1.2" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="../Discord.Net/src/Discord.Net.Commands/Discord.Net.Commands.csproj" />
+    <ProjectReference Include="../Discord.Net/src/Discord.Net.Core/Discord.Net.Core.csproj" />
+    <ProjectReference Include="../Discord.Net/src/Discord.Net.Rest/Discord.Net.Rest.csproj" />
+    <ProjectReference Include="../Discord.Net/src/Discord.Net.Webhook/Discord.Net.Webhook.csproj" />
+    <ProjectReference Include="../Discord.Net/src/Discord.Net.WebSocket/Discord.Net.WebSocket.csproj" />
+    <ProjectReference Include="../Discord.Net/src/Discord.Net.Interactions/Discord.Net.Interactions.csproj" />
   </ItemGroup>
 </Project>
